...
          tabBarButton: (props) => (
            <PulsatingTabBarButton
              {...props}
              onPress={(e: any) => {
                if (!user) {
                  Alert.alert(
                    "Login Required",
                    "Please log in to find a car.",
                    [
                      { text: "Cancel", style: "cancel" },
                      { text: "Login", onPress: () => router.push("/login") },
                    ]
                  );
                } else {
                  router.replace("/request" as any);
                }
              }}
...
