appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
    stopApp: true
- openLink: mobile://request/upload
- tapOn:
    id: "request-upload-submit"
- assertVisible: "Login Required"
- tapOn: "OK"
- assertVisible: "Login"
