appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
    stopApp: true
- openLink: mobile://trade-in
- tapOn:
    id: "trade-in-submit"
- assertVisible: "Login Required"
- tapOn: "OK"
- assertVisible: "Login"
